feat: add Apache 2.0 license header to all Java files and update application configuration